# farcaster-cli-client

./: .gitignore  README.md  main.py  pyproject.toml
farcaster_cli/: main.py
